Ajout de la vue Paramètre, A propos, Nous contacter (relié a l'API Gmail), documentation complete de l'appli, gestion des layout compatible pour tous les phones, gestion des problemes de reseaux, buffer d'un morceau en cas de micro coupure internet, modification du nom de l'appli, du logo ===> Première finalisation de l'appli TEST APPLI DEMANDE

--- a/RADIO/app/src/main/res/values/strings.xml
+++ b/RADIO/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">RADIO</string>
+    <string name="app_name">Run Radio</string>
+    <string name="title_activity_a_propos">a_propos</string>
 </resources>
